@startuml
skinparam defaultFontName Sans-Serif
skinparam defaultFontSize 12
skinparam classFontStyle bold
skinparam ArrowColor #64748b

skinparam class {
    BackgroundColor #E0E7FF
    BorderColor #6366f1
    BorderThickness 1.2
    AttributeFontColor #1e1b4b
    ArrowColor #64748b
}

class Business {
    + id : UUID
    + name : text
    + type : enum
    + owner_user_id : UUID
    + birthday_config : jsonb
    + working_hours : jsonb
    + created_at : timestamp
    --
    + create()
    + update()
    + delete()
}

class User {
    + id : UUID
    + business_id : UUID
    + auth_uid : UUID
    + name : text
    + email : text
    + role : enum
    --
    + invite()
    + linkAuth()
    + remove()
}

class Client {
    + id : UUID
    + business_id : UUID
    + name : text
    + phone : text
    + birthday : date
    + language_pref : enum
    + created_at : timestamp
    --
    + register()
    + mergePhone()
}

class Service {
    + id : UUID
    + business_id : UUID
    + name : text
    + duration_min : int
    + price : decimal
    + category : text
    --
    + create()
    + adjustDuration()
}

class Appointment {
    + id : UUID
    + business_id : UUID
    + client_id : UUID
    + service_id : UUID
    + user_id : UUID
    + scheduled_at : timestamp
    + status : enum
    + reminder_sent_24h : bool
    + reminder_sent_1h : bool
    --
    + create()
    + confirm()
    + cancel()
    + markArrived()
    + markCompleted()
}

class Message {
    + id : UUID
    + business_id : UUID
    + client_id : UUID
    + direction : enum
    + content : text
    + language : enum
    + intent : text
    + media_url : text
    + created_at : timestamp
    --
    + persist()
    + classify()
}

class Notification {
    + id : UUID
    + business_id : UUID
    + type : enum
    + channel : enum
    + payload : jsonb
    + status : enum
    + sent_at : timestamp
    --
    + send()
    + acknowledge()
}

class Document {
    + id : UUID
    + business_id : UUID
    + client_id : UUID
    + appointment_id : UUID
    + storage_path : text
    + ocr_result : jsonb
    + created_at : timestamp
    --
    + uploadFromWhatsApp()
    + runOCR()
}

class Voucher {
    + id : UUID
    + business_id : UUID
    + client_id : UUID
    + code : text
    + expires_at : timestamp
    + redeemed_at : timestamp
    --
    + generate()
    + redeem()
}

class Vehicle {
    + id : UUID
    + business_id : UUID
    + client_id : UUID
    + vin : text
    + plate : text
    + mileage : int
    + service_log : jsonb
    --
    + register()
    + attachPhoto()
}

class QueueEntry {
    + id : UUID
    + business_id : UUID
    + client_id : UUID
    + position : int
    + eta_min : int
    + created_at : timestamp
    --
    + join()
    + advance()
}

' ===== Associations =====
Business "1" *-- "*" User
Business "1" *-- "*" Client
Business "1" *-- "*" Service
Business "1" *-- "*" Appointment
Business "1" *-- "*" Message
Business "1" *-- "*" Notification

Client       "1" -- "*" Appointment
Service      "1" -- "*" Appointment
User         "0..1" -- "*" Appointment : assigne >

Client       "1" -- "*" Message
Client       "1" -- "*" Document
Client       "1" -- "*" Voucher
Client       "1" -- "*" Vehicle      : <<garage>>
Client       "1" -- "*" QueueEntry   : <<labo>>

Appointment  "0..1" -- "*" Document
Appointment  "1" -- "*" Notification : declenche >

@enduml
